<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scrollbars="vertical"
            tools:context=".LauncherActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center_horizontal"
                android:text="@string/app_title" />

            <Button
                android:id="@+id/spotify"
                style="@style/ButtonStyle"
                android:text="@string/spotify" />

            <Button
                android:id="@+id/scores"
                style="@style/ButtonStyle"
                android:text="@string/score" />

            <Button
                android:id="@+id/library"
                style="@style/ButtonStyle"
                android:text="@string/library" />


            <Button
                android:id="@+id/buildit"
                style="@style/ButtonStyle"
                android:text="@string/build_it_bigger" />

            <Button
                android:id="@+id/xyz"
                style="@style/ButtonStyle"
                android:text="@string/xyz_reader" />


            <Button
                android:id="@+id/capstone"
                style="@style/ButtonStyle"
                android:text="@string/my_own_app" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>